# RadioHACK

./: README.md
SERVER/: CMakeLists.txt
SERVER/src/: main.cpp
SERVER/src/database/: database.cpp  database.h
WEB/: main.py
WEB/HTML/: admin.html  controller_list.html  roles.html  status.html  style.css
